apply plugin: 'java'

sourceCompatibility = '1.8'
[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

repositories {
	mavenCentral()
	allprojects {
		repositories {
			maven {
				url 'https://jitpack.io'
			}
		}
	}
}

dependencies {
	implementation 'com.github.trystan:asciipanel:4af354155a'
	implementation 'com.github.yellowstonegames.SquidLib:squidlib:v3.0.4'
}
